--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </div>
     </div>
 
+    <div id="notification">
+        <ion-icon name="checkmark-outline"></ion-icon>
+        <p>The file has been successfully uploaded.</p>
+    </div>
+
     <header>
         <!-- <h1>Memerie</h1> -->
         <img src="assets/img/logo.jpg" alt="Logo">
