--- a/old.html
+++ b/old.html
@@ -9,14 +9,14 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="assets/img/favicon.png" sizes="144x144">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/drive.js"></script>
-    <link rel="stylesheet" href="assets/css/drive.css">
+    <script src="assets/js/ifunny.js"></script>
+    <link rel="stylesheet" href="assets/css/ifunny.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
-    <!-- <div id="upload">
+    <div id="upload">
         <div id="upload-content">
             <h2>Upload a meme</h2>
             <div class="separator"></div>
@@ -27,23 +27,47 @@
                 <button id="upload-submit">Upload</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
-    <!-- <div id="notification">
+    <div id="notification">
         <ion-icon name="checkmark-outline"></ion-icon>
         <p>The file has been successfully uploaded.</p>
-    </div> -->
+    </div>
 
+    <header>
+        <!-- <h1>Memerie</h1> -->
+        <img src="assets/img/logo.jpg" alt="Logo">
+        <input type="text" id="searchBar" placeholder="Search...">
+        <!-- <div id="search-results" class="disabled"></div> -->
+    </header>
     <div id="app">
-        <div id="drive-list">
-            <div class="drive-header">
-              <div class="drive-col title">Title</div>
-              <div class="drive-col filesize">Filesize</div>
-              <div class="drive-col lastmodified">Last Modified</div>
-              <div class="drive-col keywords">Keywords</div>
+        <div id="left">
+            <div id="left-content">
+                <button id="uploadFile">Add Meme</button>
+                <div id="meme-list-container">
+                    <h2>Meme catalog</h2>
+                    <div class="separator"></div>
+                    <div id="meme-list">
+                    </div>
+                </div>
             </div>
-            <div id="drive-rows"></div>
-          </div>
+        </div>
+        <div id="middle">
+            <div id="search">
+                <h2 id="query"></h2>
+                <p id="results"></p>
+            </div>
+            <div class="separator"></div>
+            <div id="search-results">
+            </div>
+        </div>
+        <div id="right">
+            <div id="right-content">
+                <h2>trending channels</h2>
+                <div id="search-categories">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
