--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <div id="upload-button">
+        <ion-icon name="add-outline"></ion-icon>
+        <p>Upload file</p>
+    </div>
+
     <!-- <div id="upload">
         <div id="upload-content">
             <h2>Upload a meme</h2>
