--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
         <p>Upload file</p>
     </div>
 
-    <!-- <div id="upload">
-        <div id="upload-content">
-            <h2>Upload a meme</h2>
-            <div class="separator"></div>
+    <div id="player-container">
+        <div id="player">
+        </div>
+    </div>
+
+    <div id="upload-container">
+        <div id="upload">
             <form id="upload-form">
                 <input type="text" id="upload-title" placeholder="Title">
-                <div id="categories">
-                </div>
                 <button id="upload-submit">Upload</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <!-- <div id="notification">
         <ion-icon name="checkmark-outline"></ion-icon>
@@ -40,6 +41,7 @@
     </div> -->
 
     <div id="app">
+        <header></header>
         <div id="drive-list">
             <div class="drive-header">
                 <div class="drive-col title">Title</div>
