--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <div class="drive-col title">Title</div>
                 <div class="drive-col keywords">Keywords</div>
                 <div class="drive-col lastmodified">Last Modified</div>
+                <div class="drive-col dimensions">Dimensions</div>
+                <div class="drive-col path">Location</div>
                 <div class="drive-col filesize">Filesize</div>
             </div>
             <div id="drive-rows"></div>
