--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="drive-header">
                 <div class="drive-col title">Title</div>
                 <div class="drive-col keywords">Keywords</div>
-                <div class="drive-col lastmodified">Last Modified</div>
+                <div class="drive-col lastmodified">Uploaded</div>
                 <div class="drive-col dimensions">Dimensions</div>
                 <div class="drive-col path">Location</div>
                 <div class="drive-col filesize">Filesize</div>
