--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 
     <div id="app">
         <header>
-            <input type="text" id="search" autocomplete="off" placeholder="Search...">
+            <input type="text" id="searchbar" autocomplete="off" placeholder="Search...">
         </header>
         <div id="drive-list">
             <div id="location"></div>
             <div class="drive-header">
-                <div class="drive-col title">Title</div>
-                <div class="drive-col keywords">Keywords</div>
-                <div class="drive-col lastmodified">Uploaded</div>
-                <div class="drive-col dimensions">Dimensions</div>
-                <div class="drive-col path">Location</div>
-                <div class="drive-col filesize">Filesize</div>
+                <div class="drive-col title">Title<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
+                <div class="drive-col keywords">Keywords<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
+                <div class="drive-col lastmodified">Uploaded<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
+                <div class="drive-col dimensions">Dimensions<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
+                <div class="drive-col path">Location<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
+                <div class="drive-col filesize">Filesize<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
             </div>
             <div id="drive-rows"></div>
         </div>
