--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <input type="text" id="searchbar" autocomplete="off" placeholder="Search...">
         </header>
         <div id="drive-list">
-            <div id="location"></div>
+            <div id="top">
+                <div id="location"></div>
+                <ion-icon id="reload" name="reload-outline"></ion-icon>
+            </div>
             <div class="drive-header">
                 <div class="drive-col title">Title<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
                 <div class="drive-col keywords">Keywords<ion-icon class="sortingOrder" name="chevron-down-outline"></ion-icon></div>
